--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,5 +1,15 @@
-<input type="text" [(ngModel)] = "loginData.username"><br>
-<input type="password" [(ngModel)] = "loginData.password">
+<div class="alert alert-danger" *ngIf="false">
+	There was a problem logging in. Please try again.
+</div>
 
-<button (click)= "login()">Login</button>
-<button (click)= "getAccessTokenByRefreshToken()">Access Token By Refresh Token</button>
+
+
+<div class="form-group">
+    <label for="username">Username:</label> <input type="text"
+        class="form-control" id="username" [(ngModel)] = "loginData.username"/>
+</div>
+<div class="form-group">
+    <label for="password">Password:</label> <input type="password"
+        class="form-control" id="password" [(ngModel)] = "loginData.password"/>
+</div>
+<button (click)= "login()" class="btn btn-primary">Login</button>
