--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container" style="margin-top: 65px;">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
