--- a/src/app/page/fragments/footer/footer.component.css
+++ b/src/app/page/fragments/footer/footer.component.css
@@ -1,7 +1,15 @@
 footer#foot {
-    background-color: #2f515b;
+    background-color: #243a51;
     padding: 14px 0;
 }
-section.bottomfooter * {
+footer#foot * {
     color: #FFF;
 }
+/* .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+} */
