--- a/src/app/page/fragments/footer/footer.component.html
+++ b/src/app/page/fragments/footer/footer.component.html
@@ -1,17 +1,18 @@
-<footer id="foot">
-	
-	<section class="bottomfooter">
-		<div class="container-fluid">
-			<div class="pull-left">
-				© 2017 UNICEF. Technically designed by UNICEF and implemented in collaboration with DHS and NHS.
+<footer id="foot" class="footer">
+		<div class="container">
+			<div style="    display: inline-block;">
+				© 2018 SDRC
 			</div>
-			<div class="pull-right">
+			<div class="float-right">
 				<span class="footerfont">Powered by </span><a
 					href="http://sdrc.co.in/" target="_blank" class="text_deco_none"><span
 					class="poweredbysdrc">SDRC</span></a>
 			</div>
 		</div>
 
-	</section>
-
 </footer>
+<!-- <footer class="footer">
+	<div class="container">
+	  <span class="text-muted">Place sticky footer content here.</span>
+	</div>
+  </footer> -->
