--- a/src/app/page/fragments/header/header.component.css
+++ b/src/app/page/fragments/header/header.component.css
@@ -1,33 +1,6 @@
-.nav-menu-container {
-    margin-bottom: 0;
-    background-color: #2f515b;
-    border-radius: 0;
+::ng-deep nav.custom-nav {
+    background-color: #243a51;
+}
+logo a{
     color: #FFF;
-}
-.custom-navbar-mobile {
-    color: #FFF;
-    background-color: #6689a2;
-}
-.heading_partDesktop {
-    margin-bottom: 24px;
-    margin-top: 23px;
-}
-.user-welcome {
-    margin-top: 23px;
-}
-.navHeaderCollapse2 {
-    width: 41.66666667%;
-}
-.nav.navbar-nav li:first-child a {
-    padding-left: 0;
-}
-.nav-menu-container .nav>li>a {
-    color: #FFF;
-    padding: 17.5px 10.5px;
-}
-.nav-place-right {
-    margin: 12px 0;
-}
-.nav>li>a:focus, .nav>li>a:hover{
-    background-color: transparent;
 }
