--- a/src/app/page/fragments/allUIComponents/sdrc-table/sdrc-table.component.html
+++ b/src/app/page/fragments/allUIComponents/sdrc-table/sdrc-table.component.html
@@ -1,7 +1,7 @@
 <table class="table table-bordered">
   <thead class="blue-grey lighten-4">
     <tr>
-      <th *ngFor="let column of tableColumns | uppercase">{{column}}</th>
+      <th *ngFor="let column of tableColumns | removeElement:'rowId'">{{column}}</th>
     </tr>
   </thead>
   <tbody>
