table header fixing

--- a/src/app/page/basic/basic.component.html
+++ b/src/app/page/basic/basic.component.html
@@ -5,7 +5,6 @@
 <h3 style="margin-bottom: 60px;border-bottom: 1px dotted #CCC">Banner Slider</h3>
 <app-slider></app-slider>
 
-<
 
 <h2 style="border-bottom: 1px solid #CCC">Form Components</h2>
 
@@ -15,8 +14,8 @@
 <h3 style="margin-bottom: 60px;border-bottom: 1px dotted #CCC">Inline Form</h3>
 <app-inline-form></app-inline-form>
 
-<!-- <h2>SDRC Table</h2>
-<app-sdrc-table></app-sdrc-table> -->
+<h2>SDRC Table</h2>
+<app-sdrc-table></app-sdrc-table>
 
 <h2>Dynamic Form</h2>
 <app-dynamic-form [formFields]='formFields'></app-dynamic-form>
