--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-
+<div style="margin-top:64px;">
     <router-outlet></router-outlet>
-
+</div>
 <app-footer></app-footer>
