--- a/src/app/page/basic/basic.component.html
+++ b/src/app/page/basic/basic.component.html
@@ -151,17 +151,27 @@
   
 
 
+<div class="container">
+    <div class="col-md-12">
+            <h2 style="border-bottom: 1px solid #CCC">Form Components</h2>
+            <h3 style="margin-bottom: 60px;border-bottom: 1px dotted #CCC">Basic Form</h3>
+            <app-basic-form></app-basic-form>
+    </div>   
+</div>
 
-<h2 style="border-bottom: 1px solid #CCC">Form Components</h2>
 
-<h3 style="margin-bottom: 60px;border-bottom: 1px dotted #CCC">Basic Form</h3>
-<app-basic-form></app-basic-form>
-
-<h3 style="margin-bottom: 60px;border-bottom: 1px dotted #CCC">Inline Form</h3>
-<app-inline-form></app-inline-form>
-
+<div class="container">
+        <div class="col-md-12">
+        <h3 style="margin-bottom: 60px;border-bottom: 1px dotted #CCC">Inline Form</h3>
+        <app-inline-form></app-inline-form>
+    </div> 
+    </div>
+    <div class="container">
 <h2>SDRC Table</h2>
 <app-sdrc-table></app-sdrc-table>
+</div>
 
-<h2>Dynamic Form</h2>
+<div class="container">
+<h2 class="dynamicForm-heading">Dynamic Form</h2>
 <app-dynamic-form [formFields]='formFields'></app-dynamic-form>
+</div>
