--- a/src/app/page/fragments/allUIComponents/dynamic-form/dynamic-form.component.html
+++ b/src/app/page/fragments/allUIComponents/dynamic-form/dynamic-form.component.html
@@ -1,6 +1,12 @@
 
-  <form>
-    <div *ngFor="let field of formFields; let i = index;" [ngClass]="{'form-group':field.controlType == 'textbox'}" class="row">
+  
+  
+  <div class="container margin-top">
+    <div class="row">
+     
+  <form class="col-md-12">
+      <div class="row">
+    <div *ngFor="let field of formFields; let i = index;" [ngClass]="{'form-group':field.controlType == 'textbox'}" class="row col-md-6">
       <label [attr.for]="field.key" class="col-md-5 text-right">{{field.label}}</label>
       <div [ngSwitch]="field.controlType" class="col-md-6 input-holder">
         <!-- input text box -->
@@ -38,10 +44,14 @@
       </div> 
     </div>
 
+   
+   </div>
+
     <div class="form-group row">
       <div class="col-md-6 offset-md-5">
         <button class="btn btn-default" type="submit" (click)="submitForm()">Submit</button>
       </div>
     </div>
   </form>
-
+</div>
+</div>
