report component added

--- a/src/app/page/basic/basic.component.html
+++ b/src/app/page/basic/basic.component.html
@@ -172,6 +172,12 @@
 </div>
 
 <div class="container">
-<h2 class="dynamicForm-heading">Dynamic Form</h2>
+<h2>Dynamic Form</h2>
 <app-dynamic-form [formFields]='formFields'></app-dynamic-form>
 </div>
+
+
+
+        <div class="bottom-height">
+            
+            </div>
