--- a/src/app/page/fragments/allUIComponents/dynamic-form/dynamic-form.component.scss
+++ b/src/app/page/fragments/allUIComponents/dynamic-form/dynamic-form.component.scss
@@ -9,7 +9,44 @@ input[type=file] {
     padding-bottom: 0 !important;
     padding-left: 0 !important;
 }
+
+.md-form label {
+    transition: 0.2s ease-out;
+    color: #eee;
+    position: absolute;
+    top: 3px !important;
+    left: 0;
+    font-size: 1rem;
+    cursor: text;
+    margin-left: 8px !important;
+}
 .margin-top
 {
     margin-top: 40px;
+}
+
+.dropdown-menu
+{
+    width: 100%;
+}
+
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
 }
