--- a/src/app/page/fragments/header/header.component.html
+++ b/src/app/page/fragments/header/header.component.html
@@ -19,6 +19,11 @@
             <li class="nav-item" [ngClass]="{'active': router.url=='/form'}">
                 <a class="nav-link" mdbRippleRadius routerLink="form">Form</a>
             </li>
+
+            <li class="nav-item" [ngClass]="{'active': router.url=='/report'}">
+                <a class="nav-link" mdbRippleRadius routerLink="report">Report</a>
+            </li>
+
             <li class="nav-item" [ngClass]="{'active': router.url=='/basic-components'}">
                 <a class="nav-link" mdbRippleRadius routerLink="basic-components">Basic Components</a>
             </li>
